...
                                <inset key="titleEdgeInsets" minX="-125" minY="100" maxX="0.0" maxY="25"/>
                                <inset key="imageEdgeInsets" minX="37.5" minY="25" maxX="38" maxY="50"/>
                                <state key="normal" title="HISTORY" image="list">
                                    <color key="titleColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <inset key="titleEdgeInsets" minX="-125" minY="100" maxX="0.0" maxY="25"/>
                                <inset key="imageEdgeInsets" minX="38" minY="25" maxX="38" maxY="50"/>
                                <state key="normal" title="SUBMIT" image="add">
                                    <color key="titleColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="search_tableview"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="23i-5Y-8EQ">
                                        <rect key="frame" x="0.0" y="31" width="325" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="report_textfield_machine" label="report_textfield_machine"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="bNt-Y0-HI0"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="32l-Iv-35P">
                                        <rect key="frame" x="0.0" y="103" width="325" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="report_textfield_location" label="report_textfield_location"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="qTJ-bU-XuI"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fjk-7l-Kjs">
                                        <rect key="frame" x="0.0" y="175" width="325" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="report_textfield_description" label="report_textfield_description"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="pQl-7j-Trg"/>
...
                                <rect key="frame" x="25" y="364" width="325" height="33"/>
                                <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="report_button_submit"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="33" id="UHw-0N-jBY"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="user name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c43-NK-cEo">
                                        <rect key="frame" x="0.0" y="31.5" width="325" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_textfield_username" label="login_textfield_username"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Rt-0E-FkZ">
                                        <rect key="frame" x="0.0" y="94" width="325" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_textfield_password" label="login_textfield_password"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="25" y="317" width="325" height="33"/>
                                <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="login_button_login"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="33" id="Kqm-PO-X6V"/>
...
