...
        // Navigation Title
        self.navigationItem.title = "INCIDENT REPORTING"
        
        
        
        // Navigation Right Button
         self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "logout",
                                                                  style: .plain,
                                                                  target: self,
                                                                  action: #selector(Button_LogOut))
        
        if !UserDefaults.standard.bool(forKey: "user_isLoggedIn") {
            
...
